--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^9.3.0",
+    "elementtree": "^0.1.7",
+    "moment": "^2.20.1",
     "walk-folder-tree": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/moment": "^2.13.0",
+    "@types/node": "^9.3.0"
   }
 }
