--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "convert": "node built/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "elementtree": "^0.1.7",
     "moment": "^2.20.1",
+    "uuid": "^3.2.1",
     "walk-folder-tree": "^1.0.1"
   },
   "devDependencies": {
