--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "elementtree": "^0.1.7",
     "moment": "^2.20.1",
+    "node-fetch": "^1.7.3",
     "uuid": "^3.2.1",
     "walk-folder-tree": "^1.0.1"
   },
